@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-08-23T08:28:19Z",
+  "timestamp" : "2022-08-23T16:31:26Z",
   "count_outdated" : 749,
   "uniques_outdated" : 390,
   "count" : 761,
-  "uniques" : 399,
+  "uniques" : 398,
   "clones" : [
     {
       "timestamp": "2022-08-09T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "uniques": 2,
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
     },
     {
@@ -49,8 +49,8 @@
     },
     {
       "timestamp": "2022-08-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
