@@ -4,8 +4,8 @@
   "clones": [
     {
       "timestamp": "2022-08-09T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-08-13T00:00:00Z",
@@ -34,7 +34,7 @@
     },
     {
       "timestamp": "2022-08-23T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
